--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718771.md#1" target="_blank">李祥春：法轮功反迫害建立了选择善恶的标准</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718771.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-lee-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。法轮功学员李祥春博士在研讨会上发言，题为“法轮功二十年的反迫害建立了选择善恶的标准”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718914.md#1" target="_blank">《求救信》引发西澳人关注中国人权</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912121138061154-150x120.jpg" align ="left"></a>反映中共劳教所黑暗的纪录片《求救信》在澳大利亚西澳州立图书馆附属电影院里放映。在影片最后，当主人公说完“我想告诉世界，仍有许多人在中国遭受着迫害，但最后，正义一定会战胜邪恶”，剧院响起热烈掌声。“这部纪录片以非常有力的方式突出了共产党统治下的中国人民遭受到的可怕的人权侵犯。”澳洲基督教游说团西澳分部主席阿贝茨看完电影后说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718944.md#1" target="_blank">四万吨中央储备肉竞价投放 国企大发国难财</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>中共官方宣布，星期四（12日）以竞价的方式，向市场投放4万吨中央储备猪肉，但据自由亚洲电台报导，垄断了进口权的国企却借此兴风作浪，大发国难财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718769.md#1" target="_blank">汇源果汁创始人变“老赖”41亿资产被冻结</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718769.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-82640395-150x120.jpg" align ="left"></a>去年，他还是胡润百富榜上35亿元身家的富豪；今年，他就沦为四度被限制消费的“老赖”。汇源果汁创始人朱新礼的遭遇令人倍感唏嘘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718851.md#1" target="_blank">厦门地铁地面塌陷 2车坠入 大量积水涌入</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-3-150x120.jpg" align ="left"></a>继广州市区主干道12月1日发生地面塌陷之后，厦门地铁吕厝站12月12日晚发生地面塌陷，两辆轿车掉落坑内，据报并未造成人员伤亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:45 AM							</td></tr>
@@ -6,7 +8,6 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718293.md#1" target="_blank">美籍华人上海维权 受贸易战波及 护照被没收</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13967371-150x120.jpg" align ="left"></a>原籍上海市长宁区的江琴，多年前和美籍丈夫结婚后定居美国，今年初回国为合法房屋被强拆进京维权，被以通缉犯之名押回上海刑拘，美国的护照同时被办案警察扣留至今，致使江琴无法返美与丈夫团聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718625.md#1" target="_blank">罗斯：贸易战每拖一天 对美国就越有利</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-981264840-150x120.jpg" align ="left"></a>美国按计划将在12月15日对来自中国的约1600亿美元的商品加征新关税，罗斯说，“最重要的是，我们需要跟中共达成一个’合适’的协议，不管我们在12月15日达成这个协议也好，或之后也行，总之达成一个公平的协议才是最重要的。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718312.md#1" target="_blank">台行政院长：境外势力影响选举必痛加打击</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f7a5744cb77626ec22275a52b390db91-150x120.jpg" align ="left"></a>2020年中华民国总统大选逼近，行政院长苏贞昌12月12日表示，对境外势力影响台湾选举一定要痛加打击。他强调，请国人别让做票、买票及骗票等行为影响台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718180.md#1" target="_blank">11月份 至少325名法轮功学员遭绑架</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718180.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-11-mh-persecution-arrest-nov-3-150x120.png" align ="left"></a>11月份至少325名法轮功学员被绑架（其中118人已经回家），208人遭骚扰，138人被非法抄家，49人被非法判刑，77人被非法庭审，44人被非法批捕，124人被非法构陷到法院、检察院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718446.md#1" target="_blank">修例抗争半年 港人疾呼：遏止警暴还民公义</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718446.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840101538-150x120.jpg" align ="left"></a>《逃犯条例》修订争议在香港引发的自由民主抗争行动，持续超过6个月，本报采访了社工界及民间的参与者，表达他们参与持续近半年抗争活动的心声。社福界罢工委员会成员之一、社工陈文森说，“政府完全没答应完五大诉求，但香港的抗争者是没半分放松迹象，我们仍然会坚持下去！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717140.md#1" target="_blank">【十字路口】12/15美中达协议？若加税谁重伤</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717140.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfa0f83c6c062b_ttl7dayeB3_20191212-____-DJY-150x120.jpg" align ="left"></a>今天，要来跟大家聊聊美中贸易战的话题，如果你是苹果的“果粉”的话，那就更要留意了。因为12月15日，也就是这个星期天，美国很可能就要再对中国进口商品加征关税，这次加税的商品总价值大约是1600亿美元，税率是15％。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718287.md#1" target="_blank">李文足获法德人权法治奖 甩掉国保成功领奖</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9500-150x120.png" align ="left"></a>12月11日，“709”维权律师王全璋的妻子李文足冲破国保的跟踪、阻拦，来到法国驻华大使馆，领取了本年度“法德人权法治奖”。李文足表示，这是所有关注709事件所有人的荣誉，感谢外界4年来对他们的支持，让709家属能够坚持到底。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:52 PM							</td></tr>
@@ -17,17 +18,16 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717810.md#1" target="_blank">谴责何君尧两议案 香港立法会无人反对</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190722052806100484-150x120.jpg" align ="left"></a>亲共立法会议员何君尧在区议会选举中落败。日前，泛民立法会议员郭家麒和毛孟静在立法会上分别动议谴责何君尧，包括建制派在内，无人提出反对。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717564.md#1" target="_blank">中共渗透国际社会 跨境抓捕滞留泰国难民</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sbOk_oGY-150x120.jpg" align ="left"></a>由于中共迫害人权，很多大陆异议人士逃到泰国，宁可在泰国滞留当难民，也不愿回到中共野蛮专制之下。然而，中共把魔爪伸向海外继续迫害，令他们身陷险境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717662.md#1" target="_blank">黄历新年间火车票售卖首日 部分车次票被抢光</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717662.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/01/5012702021164-150x120.jpg" align ="left"></a>今日（12月12日）是大陆2020年春运火车票开始售卖的第一天，据悉，已有多个车次的车票售光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank">日本正品告输中国山寨版 无印良品上诉失败</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Muji_Olympian_City_interior_2016-150x120.jpg" align ="left"></a>中国再现山寨版吿赢原创品牌案。北京高院近日做出最终判决，判日本无印良品败诉，并责令其不但要删除纺织类商品上的“无印良品”商标，还须赔偿原告（北京无印良品）62.5万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717175.md#1" target="_blank">12月15日加税？川普或周四开会讨论</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717175.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1058995286-150x120.jpg" align ="left"></a>据三名知情人士周三对路透社透露，美国总统川普（特朗普）很可能在周四（12月12日）与高级贸易顾问会面，讨论是否按原计划在12月15日，对近1600亿美元中国商品征收15%的关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717158.md#1" target="_blank">【拍案惊奇】面对强权 港人还有两样“武器”</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df832a8be8a0c4_ttl7dayDkn_60d4138ddd69b5ff-150x120.jpg" align ="left"></a>12月11号，美国《时代》杂志公布，被称为环保少女的瑞典人格蕾塔·通贝里（Greta Thunberg），获得该杂志评选的2019年度“风云人物”。但在评选的前5名里，还有香港示威者、美国总统川普、美国众议院议长等人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1" target="_blank">中国购58.5万吨美国大豆 4月份来最大宗</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/0bd17c9aff9da98bbdf47db52c67652c-150x120.jpg" align ="left"></a>美国农业部12月11日公布，中国买家订购了58.5万吨的美国大豆，为8个多月来最大的一笔。这是美国农业部自11月14日以来，首次宣布向中国出售大豆，也是自4月1日以来最大一笔对华大豆销售。今年4月1日，中国采购量为82.8万吨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718850.md#1" target="_blank">中国高校性丑闻不断 宁波大学副教授也出事</a><br></h3>继北京大学、上海财经大学教授曝出性丑闻后，宁波大学女生在网上举报遭该校副教授性骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718729.md#1" target="_blank">中共经济会议结束  承认经济下行压力大</a><br></h3>12月10日至12日的中共中央经济工作会议承认经济下行压力加大，再提“稳定”，并被指可能还将以“放水”刺激经济，此前有分析指官方的“稳定”之说难以解决中国经济困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718649.md#1" target="_blank">陕西省纪委“厅级内鬼”胡传祥被判9年</a><br></h3>12月10日，中共陕西省纪委、省预防腐败局预防腐败室前主任胡传祥，因行贿、受贿罪而被判处9年，并处罚金320万元（人民币）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717043.md#1" target="_blank">【翻墙必看】中共高层为自己准备后路</a><br></h3>如果两年前有人说中共将很快走向覆亡，很多人认为是痴人说梦，那么在2019年即将走过之际，越来越多的人，无论是西方政要，还是中共官员和普通民众，已经相信这并非是什么不切实际的幻梦。因为中共正在往死路上狂奔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717889.md#1" target="_blank">长期熬夜写作业 河南小学生险失明</a><br></h3>近日，河南焦作一名六年级女孩因眼球疼痛、眼睛没有光感而前往医院就医。医生诊断为急性视神经网膜炎。据女孩的家长介绍，女孩因做作业慢，长期熬夜，一天只睡6个小时。经过治疗，女孩的视力恢复到1.0。医生建议，学校布置作业的量要适当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank">中国山寨告赢日本正品 无印良品上诉失败</a><br></h3>中国再现山寨版吿赢原创品牌案。北京高院近日做出最终判决，判日本无印良品败诉，并责令其不但要删除纺织类商品上的“无印良品”商标，还须赔偿原告（北京无印良品）62.5万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717468.md#1" target="_blank">河南安置房一敲就碎 民众：谁敢收房住进去？</a><br></h3>近日，河南郑州金水区小贺庄村安置房，被村民发现是豆腐渣工程——磁砖一碰就掉、梁柱混凝土破碎掉落等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716940.md#1" target="_blank">台汉光兵推军演 美国印太联络官将首次进驻</a><br></h3>美台军事交流持续升温，可望进阶至准战略伙伴关系。上周，美国B-52轰炸机首进台北飞航情报区，另外传出台湾2020年规划的汉光电脑军演模拟将首度纳入美军连络官即时联系，演练台美双方在军事通报机制。这些动作可谓美国具体落实今年五月底发表印太战略报告中所陈述将与台湾发展强有力伙伴关系的目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717304.md#1" target="_blank">内蒙古鄂尔多斯公安局高官刘杰落马</a><br></h3>中共内蒙古公安系统被深度清洗。12月12日，内蒙古鄂尔多斯市公安局副局长刘杰涉嫌“严重违纪违法”，目前正在接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717219.md#1" target="_blank">山东90后男子救轻生女双双遇难</a><br></h3>12月11日晚7时后，在杭州下沙街道幸福南路东海橙郡小区附近的一座桥上，一名安徽籍高中女生轻生坠入河中。随后当场有一90后山东男生路过，于是跳入河中救此女孩。但两人均遇难。大陆网民纷纷赞赏男子见义勇为的精神，但也为之惋惜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
